final design